# tribal-village

./: .gitignore  AGENTS.md  MANIFEST.in  Makefile  build_team_configs.sh  install.sh  modify_team_count.py  pyproject.toml  resources  tribal_village.nim  tribal_village.nimble
.codex/: settings.local.json
baselines/: benchmark.json
docs/: README.md  ai_system.md  aoe_assessment_builtin_ai.md  asset_pipeline.md  asset_size_audit.md  audit_episode_results.md  audit_tools.md  cli_and_debugging.md  clippy_tint_freeze.md  combat.md  combat_visuals.md  configuration.md  economy_respawn.md  game_logic.md  observation_space.md  perf-audit-pathfinding-movement.md  performance_optimization_roadmap.md  quickstart.md  recently-merged-features.md  spawn_pipeline.md  step-hotpath-profile.md  temple_hybridization.md  terrain_biomes.md  test-audit-report.md  training_and_replays.md  wildlife_predators.md  world_generation.md
scripts/: asset_audit.py  asset_postprocess.py  asset_prompt_rows.py  audit_gui.py  audit_settlement.nim  benchmark_steps.nim  capture_screenshots.py  cliff_assets.py  feature_audit.nim  gameplay_metrics.py  generate_assets.py  generate_cliff_variants.py  generate_placeholder_directions.py  render_asset_preview.py  run_all_experiments.sh  run_v2_contrastive_experiments.sh  script_paths.py  sprite_transforms.py  train_contrastive.sh  visual_regression.py
src/: action_audit.nim  action_freq_counter.nim  agent_control.nim  arena_alloc.nim  audio.nim  audio_events.nim  audit_manager.nim  balance_scorecard.nim  biome.nim  colors.nim  combat.nim  combat_audit.nim  (+55 more)
(+77 files in other folders)
